KMR: gulp and npm updates.
- Add gulp lint task
- Update npm scripts
  - Add patternlab as a script rather than postinstall
  - Add husky to run lint on precommit.
  - Update postinstall to clear info files
- Update link.function.php to work with Drupal attributes.
- Update gulp config to add assets in components directory
- Update styles task to not break for rtl
- Update breakpoint breakpoints

--- a/sass/config/_breakpoints.scss
+++ b/sass/config/_breakpoints.scss
@@ -1,4 +1,11 @@
 $thumb: 0 30rem;
+
 $palm: 30.0625rem 47.9375rem;
+$upto-palm: max-width 47.9375rem;
+$above-palm: 48rem;
+
 $lap: 48rem 64rem;
+$upto-lap: max-width 48rem;
+$above-lap: 64.0625rem;
+
 $desk: 64.0625rem;
