--- a/sass/config/_plugins.scss
+++ b/sass/config/_plugins.scss
@@ -1,3 +1,2 @@
-@import "breakpoint-sass/stylesheets/breakpoint";
-@import "sass-direction/direction";
-
+@import 'breakpoint-sass/stylesheets/breakpoint';
+@import 'sass-direction/direction';
