KMR: Remove patternlab and update

--- a/sass/config/_breakpoints.scss
+++ b/sass/config/_breakpoints.scss
@@ -1,11 +1,5 @@
-$thumb: 0 30rem;
+$mobile: 0 768px;
 
-$palm: 30.0625rem 47.9375rem;
-$upto-palm: max-width 47.9375rem;
-$above-palm: 48rem;
+$tablet: 768px 1024px;
 
-$lap: 48rem 64rem;
-$upto-lap: max-width 48rem;
-$above-lap: 64.0625rem;
-
-$desk: 64.0625rem;
+$desk: 1025px;
