--- a/components/_patterns/style.scss
+++ b/components/_patterns/style.scss
@@ -1,10 +1,7 @@
-// Start libs
-// Better style reset
-@import 'normalize';
-// A cleaner way to do breakpoints/media queries, http://breakpoint-sass.com/
-@import 'breakpoint-sass/stylesheets/breakpoint';
-// End libs
+// Theme configuration.
+@import 'config/**/*';
 
+// Theme components based on Atomic Design.
 @import '00-base/**/*.scss';
 @import '01-atoms/**/*.scss';
 @import '02-molecules/**/*.scss';
